# pi-hub

./: .env.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml  local-demo.yaml
deploy/systemd/: smart-display-kiosk.service  smart-display.service
deploy/x11/: kiosk-session.sh
docs/: review-prompt.md
scripts/: install-pi.sh  run-local-test-server.sh  take-screenshots.sh
smart_display/: __init__.py  app.py  calendar_layout.py  config.py  http_client.py  i18n.py  local_server.py  models.py  scheduler.py  state_store.py  watch_faces.py
smart_display/cache/: __init__.py  disk_cache.py  image_cache.py
smart_display/providers/: __init__.py  _parsing.py  base.py  caldav_provider.py  lightroom_source.py  mock_provider.py  spotify_provider.py  weather_openmeteo.py
smart_display/web/: __init__.py  origin_guard.py  routes.py
smart_display/web/static/css/: app.css
smart_display/web/static/fonts/: README.md
smart_display/web/static/js/: app.js
smart_display/web/templates/: index.html
tests/: _support.py  test_calendar_formatting.py  test_calendar_layout.py  test_calendar_midnight.py  test_config.py  test_disk_cache.py  test_i18n.py  test_lightroom_manifest.py  test_local_server.py  test_scheduler.py  test_screensaver_pause.py  test_spotify_controls.py  test_state_store.py  test_watch_faces.py  test_weather_icons.py
